<resources>
    <string name="app_name">BargainCave Warehouse</string>
    <string name="title_activity_login">BC Warehouse</string>
    <string name="New">New</string>
    <string-array name="fruit_type">
        <item>Mango</item>
        <item>Avocado</item>
        <item>Banana</item>
    </string-array>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sorter">Sorter</string>
    <string name="manager">Manager</string>
    <string name="new_lot">New Lot</string>
    <string name="submit">Submit</string>
    <string name="weight">Weight</string>
    <string name="comment">Comment</string>
    <string name="kg">kg</string>
    <string name="enter_lot_s_weight">Enter this lot\'s weight in kilos</string>
    <string name="optional_comment">Optional comment</string>
    <string name="photo">Photo</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="ok">OK</string>
    <string name="cannot_login">Cannot login</string>
    <string name="enter_new_pass">You need to change your password</string>
    <string name="new_password">New Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="new_password_failed">Unable to set a new password</string>
    <string name="pass_change_ok">Password changed successfully</string>
    <string name="user_email_key">user_email_key</string>
    <string name="sorter_cam_rationale">You are required to use a camera to create the lots</string>
    <string name="submit_ok">Submitted successfully</string>
    <string name="no_thanks">No, thanks</string>
    <string name="lorem">Lorem</string>
    <string name="zero_zero">00</string>
    <string name="active_lots">Active Lots</string>
</resources>